@@ -23,6 +23,7 @@
 20. Add option to specify appearance of inactive titlebars.
 21. Recolour X of close button - not button background.
 22. Dont draw sunken button for KMenu title background - just draw Menu background.
+23. Alter the way the light part of etchibng is drawn - should help with darker color schemes.
 
 0.59.6
 ------
